--- a/spy/templates/login.html
+++ b/spy/templates/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <body>
-        <form action="/result" method="post" >
+        <form action={{ url_for('main') }} method="post" >
             帳號：<input type="text" name="user">
             密碼：<input type="text" name="password">
             <select name ="broker">
